--- a/stock_daemon/.classpath
+++ b/stock_daemon/.classpath
@@ -10,6 +10,11 @@
 	<classpathentry exported="true" kind="lib" path="lib/httpclient-cache-4.2.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpmime-4.2.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mongo-java-driver-2.11.2.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/stock_daemon/lib/mongo-java-driver-2.11.2-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
